--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,10 +60,14 @@ table {
 
 /* ==== BASE STYLES ==== */
 
+* {
+	box-sizing: border-box;
+}
+
 body {
   font-family: Merriweather, 'Times New Roman', serif;
   font-size: 1.125rem;
-  line-height: 32px;
+  line-height: 2rem;
   color: #333;
 }
 
@@ -82,6 +86,17 @@ h2 {
 
 .main-header {
   font-size: 1.125;
-  letter-spacing: 2px;
+  letter-spacing: 0,125rem;
   color: #8c8e9b;
+}
+
+.picture {
+	width: 100%;
+}
+
+/* ==== LAYOUT STYLES ==== */
+
+.main-header {
+	text-align: center;
+	padding: 1.25rem;
 }
